--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,33 @@
 appdirs==1.4.4
 attrs==21.4.0
+autopep8==1.6.0
 cattrs==1.10.0
 certifi==2022.5.18.1
 charset-normalizer==2.0.12
+distlib==0.3.4
+filelock==3.7.0
 idna==3.3
 numpy==1.22.4
 pandas==1.4.2
+platformdirs==2.5.2
+protobuf==3.19.4
+pycodestyle==2.8.0
+PyQt3D==5.15.5
+PyQt5==5.15.6
+PyQt5-sip==12.9.0
+PyQtChart==5.15.5
+PyQtDataVisualization==5.15.5
+PyQtNetworkAuth==5.15.5
+PyQtPurchasing==5.15.5
 python-dateutil==2.8.2
 pytz==2022.1
 requests==2.27.1
 requests-cache==0.9.4
 six==1.16.0
 srcomapi==0.3.3
+TBB==0.2
 tenacity==8.0.1
+toml==0.10.2
 url-normalize==1.4.3
 urllib3==1.26.9
+virtualenv==20.14.1
